--- a/Cpp101/CMakeLists.txt
+++ b/Cpp101/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Cpp101)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp)
-add_executable(Cpp101 ${SOURCE_FILES})
+set(SOURCE_FILES main.cpp Square.cpp Square.h)
+add_executable(Cpp101 ${SOURCE_FILES} Square.cpp Square.h)
