--- a/C101/CMakeLists.txt
+++ b/C101/CMakeLists.txt
@@ -3,5 +3,5 @@ project(C101)
 
 set(CMAKE_C_STANDARD 99)
 
-set(SOURCE_FILES main.c)
+set(SOURCE_FILES main.c math.h math.c)
 add_executable(C101 ${SOURCE_FILES})
