--- a/C_Trap/CMakeLists.txt
+++ b/C_Trap/CMakeLists.txt
@@ -4,4 +4,4 @@ project(C_Trap)
 set(CMAKE_C_STANDARD 99)
 
 set(SOURCE_FILES NumberTrap.c NumberTrap.h mainc.c)
-add_library(C_Trap ${SOURCE_FILES})
+add_executable(C_Trap ${SOURCE_FILES})
