--- a/C_Trap/CMakeLists.txt
+++ b/C_Trap/CMakeLists.txt
@@ -3,5 +3,5 @@ project(C_Trap)
 
 set(CMAKE_C_STANDARD 99)
 
-set(SOURCE_FILES NumberTrap.c NumberTrap.h mainc.c)
+set(SOURCE_FILES NumberTrap.c NumberTrap.h mainc.c StringTrap.c StringTrap.h)
 add_executable(C_Trap ${SOURCE_FILES})
